flux/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-task
spec:
  selector:
    app: test-task
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
